manifests/prod/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: eplastweb
  labels:
    app: eplastweb  
spec:
  selector:
    matchLabels:
      app: eplastweb
  template:
    metadata:
      labels:
        app: eplastweb 
    spec:
      containers:
        - name: eplastweb 
          image: ___containerRegistry___/eplastweb:___containerRegistry_version_frontend___
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"          
          ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
    name: eplastweb
spec:
    type: ClusterIP
    ports:
    - port: 80
    selector:
        app: eplastweb
